--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@
   font-size: 100px;
 }
 
+.products p {
+  font-size: 50px;
+}
+
 .sign-up {
   background-image: url('/images/img-8.jpg');
   background-position: center;
