--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,4 +1,9 @@
-video {
+* {
+  font-family: arial;
+  text-decoration: none;
+}
+
+img,video {
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -7,7 +12,7 @@ video {
 }
 
 .hero-container {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
+  /* background: url('/images/img-home.jpg') center center/cover no-repeat;  */
   height: 100vh;
   width: 100%;
   display: flex;
@@ -16,6 +21,7 @@ video {
   align-items: center;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
   object-fit: contain;
+  
 }
 
 .hero-container > h1 {
