--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 }
 
 .sign-up {
-  background-image: url('/images/SJSU-campus.jpeg');
+  background-image: url('/images/personal-website.png');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
